<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="106dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@String:Esfera_imagen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.179"
        app:srcCompat="@drawable/esfera" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="120dp"
        android:layout_height="106dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@String:subo_imagen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.179"
        app:srcCompat="@drawable/cubo" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="120dp"
        android:layout_height="106dp"
        android:contentDescription="@String:cono_imagen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.179"
        app:srcCompat="@drawable/cono" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="372dp"
        android:layout_height="31dp"
        android:layout_marginTop="44dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/rbEsfera"
            android:layout_width="142dp"
            android:layout_height="wrap_content"
            android:text="@string/Esfera" />

        <RadioButton
            android:id="@+id/rbCubo"
            android:layout_width="137dp"
            android:layout_height="wrap_content"
            android:text="@string/Cubo" />

        <RadioButton
            android:id="@+id/rbCono"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Cono" />
    </RadioGroup>

    <EditText
        android:id="@+id/radioInput"
        android:layout_width="78dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/Radio"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/etlado"
        app:layout_constraintHorizontal_bias="0.153"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.203" />

    <EditText
        android:id="@+id/etlado"
        android:layout_width="78dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/Lado"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/lCono"
        app:layout_constraintHorizontal_bias="0.703"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.203" />

    <EditText
        android:id="@+id/lCono"
        android:layout_width="78dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/Altura"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.942"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.203" />

    <Button
        android:id="@+id/bcalcula"
        android:layout_width="128dp"
        android:layout_height="52dp"
        android:text="@string/Volumen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etlado"
        app:layout_constraintVertical_bias="0.309" />

    <TextView
        android:id="@+id/tvResultado"
        android:layout_width="380dp"
        android:layout_height="138dp"
        android:textColorLink="#009688"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bcalcula" />

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="275dp"
        android:layout_height="51dp"
        android:text="@string/Calculo"
        android:textSize="36sp"
        app:autoSizeMaxTextSize="@android:dimen/notification_large_icon_width"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>